restore missing signage CSS styles

--- a/Stylesheets/Main.less
+++ b/Stylesheets/Main.less
@@ -37,6 +37,7 @@
 @import 'class/placeholder';
 @import 'class/region';
 @import 'class/search';
+@import 'class/signage';
 @import 'class/snippet';
 @import 'class/sort-controls';
 @import 'class/source';
