add date byline to doc pages

--- a/Stylesheets/class/hero.less
+++ b/Stylesheets/class/hero.less
@@ -83,6 +83,17 @@
         margin-top: 0.5em;
     }
 
+    time.byline
+    {
+        display: block;
+        margin: 0.5rem 0;
+        color: var(--fg-semi);
+        font-style: italic;
+    }
+    time.byline + a.source
+    {
+        margin-top: 1rem;
+    }
     a.source + a.source
     {
         margin-top: 0.5rem;
